tests/fixtures/invalid/float_bitand_bool.py
# Cannot bitwise AND Float and Bool
x: float = 1.0 & True
